# xlytics

./: .env.example  README.md  pyproject.toml
docs/: mkdocs.yml
docs/docs/: getting-started.md  index.md
example/: ai_run.py  url_search_run.py
example/output/: analysis_results.json
example/search_output/: metadata.json
example/url_output/: metadata.json
example/url_output/media/1944517074384253256/: GvxP-CDXMAANFST_vision_results.json
xlytics/commons/: logger.py  utils.py
xlytics/config/: config.py
xlytics/llms/: llava_model.py  local_lang.py  pipeline.py  yolo_model.py
xlytics/llms/prompts/: __init__.py  simple_prompt.py
xlytics/services/: __init__.py  helpers.py  twitter.py
xlytics/services/utils/: decorators.py  file_utils.py
